kubernetes/platform/kafka/schema-registry/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: kafka
  labels:
    app.kubernetes.io/name: schema-registry
    app.kubernetes.io/instance: schema-registry
  annotations:
    ignore-check.kube-linter.io/non-existent-service-account: |
      "Service account is defined in ../service-account.yaml. Uncertain why it is not picked up."
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: schema-registry
      app.kubernetes.io/instance: schema-registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: schema-registry
        app.kubernetes.io/instance: schema-registry
    spec:
      # enableServiceLings=false. Automatic ingestion of service environment variables is not desired
      # schema-registry service injects SCHEMA_REGISTRY_PORT variable which makes the schema registry fail to start
      # See https://github.com/confluentinc/schema-registry/issues/689#issuecomment-824769666
      enableServiceLinks: false
      serviceAccountName: schema-registry-sa
      securityContext:
        fsGroup: 1000
      containers:
        - name: schema-registry
          imagePullPolicy: IfNotPresent
          image: "docker.io/confluentinc/cp-schema-registry:8.2.1@sha256:43ffd53d147353c97d1f98c5c9777c70919dd86cf141b42aaa94bb552a875b42"
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: config
              mountPath: /etc/schema-registry
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsUser: 1000
          resources:
            limits:
              cpu: 750m
              memory: 768Mi
            requests:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: tmp
          emptyDir: {}
        - name: config
          emptyDir: {}
