kubernetes/platform/kafka/schema-registry/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # Enable cert-manager to create automatically the SSL certificate and store in Secret
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    cert-manager.io/common-name: schema-registry.${CLUSTER_DOMAIN}
  labels:
    app.kubernetes.io/name: schema-registry
  name: schema-registry
spec:
  ingressClassName: nginx
  rules:
    - host: schema-registry.${CLUSTER_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: schema-registry
                port:
                  number: 8081
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - schema-registry.${CLUSTER_DOMAIN}
      secretName: schema-registry-cert
